Improved logic and logging based on review. Added a test function for oc validation.